fix course box alignment

--- a/colmar/mobile.css
+++ b/colmar/mobile.css
@@ -1,3 +1,7 @@
+/* * {
+  border: 1px solid red;
+} */
+
 @media screen and (max-width: 768px) {
     #desktop {
         display: none;
@@ -118,22 +122,20 @@
       width: 100%;
       display: flex;
       flex-direction: column;
-
     }
     
     #course .course-container {
       width: 100%;
       margin: 0 0 8px 0;
+      align-self: center;
     }
 
     #course .course-container .text-container {
-      width: 100%;
       padding: 16px 16px 24px 16px;
       background-color: #d8d8d8;
     }
 
     #course .course-container .text-container h2 {
-      width: 100%;
       text-align: left;
       font-size: 1rem;
     }
